Change implementation of sorting feature to improve efficiency